# fluent-selectors

./: README.md  pyproject.toml
src/fluent_selectors/: __init__.py
tests/: conftest.py  test.html  test_fluent_selectors.py
